<resources>
    <string name="app_name">SpaceX</string>

    <string name="title" translatable="false">title</string>
    <string name="explanation" translatable="false">explanation</string>
    <string name="image" translatable="false">image</string>
    <string name="date" translatable="false">date</string>
    <string name="menu_sort" translatable="false">sort</string>
    <string name="profile" translatable="false">profile</string>
    <string name="favorite" translatable="false">favorite</string>

    <string name="new_dates_first">new dates first</string>
    <string name="old_dates_first">old dates first</string>

    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="confirmation">confirmation</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="log_out">log out</string>
    <string name="log_in">log in to your profile</string>

    <string name="start_image" translatable="false">start image</string>
    <string name="latest_news">latest news</string>

</resources>